Se crea el CSS para la página de inicio

--- a/index.html
+++ b/index.html
@@ -4,18 +4,66 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mercadohoy</title>
+  <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
   <header>
-    <h1>Mercado Hoy</h1>
+    <section class="nav">
+      <img src="#" alt="menu">
+      <h1>Mercado Hoy</h1>
+      <img src="#" alt="carrito">
+    </section>
     <p>Proyecto como evidencia de producto realizado en el tecnologo en analisis y desarrollo de software</p>
   </header>
   <main>
-    
+    <section class="card">
+      <article class="card_product">
+        <img src="#" alt="img_Product">
+        <p>Nombre de producto</p>
+        <p>Precio producto</p>
+        <p>Descripción producto</p>
+      </article>
+
+      <article class="card_product">
+        <img src="#" alt="img_Product">
+        <p>Nombre de producto</p>
+        <p>Precio producto</p>
+        <p>Descripción producto</p>
+      </article>
+      
+      <article class="card_product">
+        <img src="#" alt="img_Product">
+        <p>Nombre de producto</p>
+        <p>Precio producto</p>
+        <p>Descripción producto</p>
+      </article>
+
+      <article class="card_product">
+        <img src="#" alt="img_Product">
+        <p>Nombre de producto</p>
+        <p>Precio producto</p>
+        <p>Descripción producto</p>
+      </article>      
+
+      <article class="card_product">
+        <img src="#" alt="img_Product">
+        <p>Nombre de producto</p>
+        <p>Precio producto</p>
+        <p>Descripción producto</p>
+      </article>
+
+      <article class="card_product">
+        <img src="#" alt="img_Product">
+        <p>Nombre de producto</p>
+        <p>Precio producto</p>
+        <p>Descripción producto</p>
+      </article>
+
+    </section>
   </main>
   <footer>
     <p>Todos los derechos reservados</p>
-    <p>Diseñado y programado por Paula A. Sosa Hdez.</p>
+    <p>Diseñado y programado por Paula A. Sosa Hdez. 2025</p>
   </footer>
 </body>
 </html>
