Update card con las flechas de movimiento

--- a/index.html
+++ b/index.html
@@ -18,47 +18,83 @@
   <main>
     <section class="card">
       <article class="card_product">
-        <img src="#" alt="img_Product">
+        <div>
+          <img src="#" alt="arrow_left">
+          <img src="#" alt="img_Product">
+          <img src="#" alt="arrow_rigth">
+        </div>
         <p>Nombre de producto</p>
         <p>Precio producto</p>
         <p>Descripción producto</p>
       </article>
 
       <article class="card_product">
-        <img src="#" alt="img_Product">
+        <div>
+          <img src="#" alt="arrow_left">
+          <img src="#" alt="img_Product">
+          <img src="#" alt="arrow_rigth">
+        </div>
         <p>Nombre de producto</p>
         <p>Precio producto</p>
         <p>Descripción producto</p>
       </article>
       
       <article class="card_product">
-        <img src="#" alt="img_Product">
+        <div>
+          <img src="#" alt="arrow_left">
+          <img src="#" alt="img_Product">
+          <img src="#" alt="arrow_rigth">
+        </div>
         <p>Nombre de producto</p>
         <p>Precio producto</p>
         <p>Descripción producto</p>
       </article>
 
       <article class="card_product">
-        <img src="#" alt="img_Product">
+        <div>
+          <img src="#" alt="arrow_left">
+          <img src="#" alt="img_Product">
+          <img src="#" alt="arrow_rigth">
+        </div>
         <p>Nombre de producto</p>
         <p>Precio producto</p>
         <p>Descripción producto</p>
       </article>      
 
       <article class="card_product">
-        <img src="#" alt="img_Product">
+        <div>
+          <img src="#" alt="arrow_left">
+          <img src="#" alt="img_Product">
+          <img src="#" alt="arrow_rigth">
+        </div>
         <p>Nombre de producto</p>
         <p>Precio producto</p>
         <p>Descripción producto</p>
       </article>
 
       <article class="card_product">
-        <img src="#" alt="img_Product">
+        <div>
+          <img src="#" alt="arrow_left">
+          <img src="#" alt="img_Product">
+          <img src="#" alt="arrow_rigth">
+        </div>
         <p>Nombre de producto</p>
         <p>Precio producto</p>
         <p>Descripción producto</p>
       </article>
-
+  <!--
+    ESTRUCTURA CARD PRODUCTOS
+      <article class="card_product">
+        <div>
+          <img src="#" alt="arrow_left">
+          <img src="#" alt="img_Product">
+          <img src="#" alt="arrow_rigth">
+        </div>
+        <p>Nombre de producto</p>
+        <p>Precio producto</p>
+        <p>Descripción producto</p>
+      </article>
+  -->
     </section>
   </main>
   <footer>
