Agrego la navegacion
Agrego la navegacion

--- a/index.html
+++ b/index.html
@@ -9,9 +9,17 @@
 <body>
   <header>
     <section class="nav">
-      <img src="#" alt="menu">
+      <div>
+        <img src="#" alt="menu">
+        <a href="./pages/registro.html">Registro</a>
+        <a href="./pages/ingreso.html">Ingreso</a>
+        <a href="./pages/compara.html">Comparador</a>
+      </div>
       <h1>Mercado Hoy</h1>
-      <img src="#" alt="carrito">
+      <div>
+        <img src="#" alt="carrito">
+        <a href="./pages/carrito.html">Carrito</a>
+      </div>
     </section>
     <p>Proyecto como evidencia de producto realizado en el tecnologo en analisis y desarrollo de software</p>
   </header>
