--- a/pages/registro.html
+++ b/pages/registro.html
@@ -24,7 +24,32 @@
     <p>Proyecto como evidencia de producto realizado en el tecnologo en analisis y desarrollo de software</p>
   </header>
   <main>
-    <p>Este es el main</p>
+    <br>
+    <h1 class="form_container">Formato de registro a nuestra app Mercado Hoy</h1>
+
+    <section>
+      <form class="form_container">
+        <label for="nombre">Nombre:</label>
+        <input type="text" id="nombre" name="nombre" placeholder="Ingresa tu nombre" required><br>
+        <label for="apellido">Apellido:</label>
+        <input type="text" id="apellido" name="apellido" placeholder="Ingresa tu apellido" required><br>
+        <label for="id">Identificación:</label>
+        <input type="text" name="tipoid" id="tipoid" placeholder="Tipo de identificación" required>
+        <input type="number" id="idnumber" name="idnumber" placeholder="Número de identificación" required><br>
+
+        <label for="nacimiento">Fecha de nacimiento:</label>
+        <input type="date" id="nacimiento" name="nacimiento" placeholder="Ingresa tu fecha de nacimiento" required><br>
+
+        <label for="correo">Correo:</label>
+        <input type="email" id="correo" name="correo" placeholder="Ingresa tu correo" required><br>
+        <label for="clave">Clave:</label>
+        <input type="text" id="clave" name="clave" placeholder="Ingresa tu clave" required><br>
+
+        <div>
+          <input type="submit" value="REGISTRARME">
+        </div>
+      </form>
+    </section>
   </main>
   <footer>
     <p>Todos los derechos reservados</p>
