--- a/pages/ingreso.html
+++ b/pages/ingreso.html
@@ -24,7 +24,22 @@
     <p>Proyecto como evidencia de producto realizado en el tecnologo en analisis y desarrollo de software</p>
   </header>
   <main>
-    <p>Este es el main</p>
+    <br>
+    <h1 class="form_container">Formato de autenticación en la app Mercado Hoy</h1>
+
+    <section>
+      <form class="form_container">
+        
+        <label for="correo">Correo:</label>
+        <input type="email" id="correo" name="correo" placeholder="Ingresa tu correo" required><br>
+        <label for="clave">Clave:</label>
+        <input type="text" id="clave" name="clave" placeholder="Ingresa tu clave" required><br>
+
+        <div>
+          <input type="submit" value="INGRESAR">
+        </div>
+      </form>
+    </section>
   </main>
   <footer>
     <p>Todos los derechos reservados</p>
