hipervinculos del nav en la pagina

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <header>
     <section class="nav">
       <div>
-        <img class="icons" src="./img/icons/mh.png" alt="logo">
+        <a href="./index.html"><img class="icons" src="./img/icons/mh.png" alt="logo"></a>
         <a href="./pages/registro.html">Registro</a>
         <a href="./pages/ingreso.html">Ingreso</a>
         <a href="./pages/compara.html">Comparador</a>
