--- a/pages/registro.html
+++ b/pages/registro.html
@@ -10,15 +10,15 @@
   <header>
     <section class="nav">
       <div>
-        <img src="#" alt="menu">
-        <a href="./pages/registro.html">Registro</a>
-        <a href="./pages/ingreso.html">Ingreso</a>
-        <a href="./pages/compara.html">Comparador</a>
+        <a href="../index.html"><img class="icons" src="../img/icons/mh.png" alt="logo"></a>
+        <a href="../pages/registro.html">Registro</a>
+        <a href="../pages/ingreso.html">Ingreso</a>
+        <a href="../pages/compara.html">Comparador</a>
       </div>
       <h1>Mercado Hoy</h1>
       <div>
-        <img src="#" alt="carrito">
-        <a href="./pages/carrito.html">Carrito</a>
+        
+        <a href="./pages/carrito.html"><img class="icons" src="../img/icons/carrito.png" alt="carrito"></a>
       </div>
     </section>
     <p>Proyecto como evidencia de producto realizado en el tecnologo en analisis y desarrollo de software</p>
