estilo en las paginas del nav

--- a/pages/compara.html
+++ b/pages/compara.html
@@ -24,7 +24,40 @@
     <p>Proyecto como evidencia de producto realizado en el tecnologo en analisis y desarrollo de software</p>
   </header>
   <main>
-    <p>Este es el main</p>
+    <h2 class="title-page">Comparador de precios</h2>
+    <section class="card">
+      <article class="card_product">
+        <div>
+          <img class="arrows" src="../img/icons/arrow_left.png" alt="arrow_left">
+          <img class="imgProd" src="../img/productos/aguacate.png" alt="img_Product">
+          <img class="arrows" src="../img/icons/arrow_rigth.png" alt="arrow_rigth">
+        </div>
+        <p class="description">Aguacate</p>
+        <p class="description">$ 7.000</p>
+        <!--<p class="description">Descripción producto</p>-->
+      </article>
+
+      <article class="card_product">
+        <div>
+          <img class="arrows" src="../img/icons/arrow_left.png" alt="arrow_left">
+          <img class="imgProd" src="../img/productos/apio.png" alt="img_Product">
+          <img class="arrows" src="../img/icons/arrow_rigth.png" alt="arrow_rigth">
+        </div>
+        <p class="description">Apio</p>
+        <p class="description">$ 4.000</p>
+        <!--<p class="description">Descripción producto</p>-->
+      </article>
+
+      <article class="card_product">
+        <div>
+          <img class="arrows" src="../img/icons/arrow_left.png" alt="arrow_left">
+          <img class="imgProd" src="../img/productos/banano.png" alt="img_Product">
+          <img class="arrows" src="../img/icons/arrow_rigth.png" alt="arrow_rigth">
+        </div>
+        <p class="description">Banano</p>
+        <p class="description">$ 2.000</p>
+        <!--<p class="description">Descripción producto</p>-->
+      </article>
   </main>
   <footer>
     <p>Todos los derechos reservados</p>
