--- a/pages/ingreso.html
+++ b/pages/ingreso.html
@@ -25,9 +25,9 @@
   </header>
   <main>
     <br>
-    <h1 class="form_container">Formato de autenticación en la app Mercado Hoy</h1>
+    <h1 class="title-page">Formato de autenticación en la app Mercado Hoy</h1>
 
-    <section>
+    <section class="form_container">
       <form class="form_container">
         
         <label for="correo">Correo:</label>
