--- a/pages/registro.html
+++ b/pages/registro.html
@@ -25,7 +25,7 @@
   </header>
   <main>
     <br>
-    <h1 class="form_container">Formato de registro a nuestra app Mercado Hoy</h1>
+    <h1 class="title-page" class="form_container">Formato de registro a nuestra app Mercado Hoy</h1>
 
     <section>
       <form class="form_container">
