mejorando links y SEO con solo un h1

--- a/pages/registro.html
+++ b/pages/registro.html
@@ -18,14 +18,14 @@
       <h1>Mercado Hoy</h1>
       <div>
         
-        <a href="./pages/carrito.html"><img class="icons" src="../img/icons/carrito.png" alt="carrito"></a>
+        <a href="../pages/carrito.html"><img class="icons" src="../img/icons/carrito.png" alt="carrito"></a>
       </div>
     </section>
     <p>Proyecto como evidencia de producto realizado en el tecnologo en analisis y desarrollo de software</p>
   </header>
   <main>
     <br>
-    <h1 class="title-page" class="form_container">Formato de registro a nuestra app Mercado Hoy</h1>
+    <h2 class="title-page" class="form_container">Formato de registro a nuestra app Mercado Hoy</h2>
 
     <section>
       <form class="form_container">
