--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -18,7 +18,7 @@
       <h1>Mercado Hoy</h1>
       <div>
         
-        <a href="./pages/carrito.html"><img class="icons" src="../img/icons/carrito.png" alt="carrito"></a>
+        <a href="./carrito.html"><img class="icons" src="../img/icons/carrito.png" alt="carrito"></a>
       </div>
     </section>
     <p>Proyecto como evidencia de producto realizado en el tecnologo en analisis y desarrollo de software</p>
